Add sticky navbar, scroll animations, and contact form enhancements

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tanaka Shumba | Cybersecurity Portfolio</title>
   <style>
+    /* General Styles */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background: black;
       color: #39ff14;
       overflow-x: hidden;
+      scroll-behavior: smooth;
     }
 
     /* Sticky navbar */
@@ -51,6 +53,11 @@
       border: 3px solid #39ff14;
       margin-bottom: 20px;
       object-fit: cover;
+      transition: transform 0.5s ease;
+    }
+
+    header img:hover {
+      transform: scale(1.05) rotate(2deg);
     }
 
     header h1 {
@@ -80,12 +87,21 @@
     .btn:hover {
       background: #39ff14;
       color: black;
+      transform: scale(1.05);
     }
 
     section {
       padding: 60px 20px;
       position: relative;
       z-index: 1;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.8s ease;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     h2 {
@@ -107,7 +123,7 @@
       border-radius: 15px;
       padding: 20px;
       text-align: center;
-      transition: transform 0.3s, opacity 1s ease;
+      transition: transform 0.3s, box-shadow 0.3s;
       opacity: 0;
       transform: translateY(20px);
     }
@@ -123,16 +139,15 @@
       color: white;
     }
 
-    .fade-in {
-      opacity: 1 !important;
-      transform: translateY(0) !important;
+    .card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px #39ff14;
     }
 
     .about, .contact {
       max-width: 800px;
       margin: 0 auto;
       color: white;
-      text-align: left;
       line-height: 1.6;
     }
 
@@ -174,10 +189,8 @@
   </style>
 </head>
 <body>
-  <!-- Particle Background -->
   <div id="particles-js"></div>
 
-  <!-- Sticky Navbar -->
   <nav>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
@@ -185,52 +198,49 @@
   </nav>
 
   <header>
-    <img src="images/about-me.jpg?v=2" alt="Tanaka Shumba Profile" />
+    <img src="images/about-me.jpg?v=3" alt="Tanaka Shumba Profile" loading="lazy"/>
     <h1>Tanaka Shumba</h1>
     <p>Welcome to my portfolio where I showcase my projects in cybersecurity, coding, and technology. Explore my work, skills, and background in IT security and software development.</p>
     <a href="resume.pdf" class="btn">View My Resume</a>
   </header>
 
-  <!-- About Section -->
   <section class="about" id="about">
     <h2>About Me</h2>
-    <p>Hello! I'm <strong>Tanaka Shumba</strong>, a detail-oriented and analytical Cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity. I am experienced in IT support, threat detection, incident response, and developing secure applications. I am proficient in Python, Java, C++, and network analysis tools, and I enjoy applying hands-on security expertise in dynamic environments.</p>
+    <p>Hello! I'm <strong>Tanaka Shumba</strong>, a detail-oriented and analytical Cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity. Experienced in IT support, threat detection, incident response, and developing secure applications. Proficient in Python, Java, C++, and network analysis tools.</p>
     
     <h3>Education</h3>
     <ul>
-      <li><strong>Troy University</strong> – M.S., Computer Science – Cybersecurity | Expected 05/2026</li>
-      <li><strong>Troy University</strong> – B.S., Cybersecurity | 12/2023</li>
+      <li>Troy University – M.S., Computer Science – Cybersecurity | Expected 05/2026</li>
+      <li>Troy University – B.S., Cybersecurity | 12/2023</li>
     </ul>
-    
+
     <h3>Experience</h3>
     <ul>
-      <li><strong>Student Worker – Computer Science, Troy University | 09/2025 – Present</strong>
+      <li>Student Worker – Computer Science, Troy University | 09/2025 – Present
         <ul>
-          <li>Assist in managing lab systems and resources for students.</li>
-          <li>Tutor students in programming and computer science fundamentals.</li>
+          <li>Manage lab systems and resources for students</li>
+          <li>Tutor students in programming and computer science fundamentals</li>
         </ul>
       </li>
     </ul>
 
     <h3>Technical Skills</h3>
     <ul>
-      <li><strong>Programming:</strong> Python, Java, C++</li>
-      <li><strong>Cybersecurity:</strong> Penetration Testing, IDS/IPS, Firewalls, Incident Response</li>
-      <li><strong>Tools:</strong> Wireshark, Nmap, Zeek, Snort, Scapy, pfSense, IPTables</li>
-      <li><strong>Operating Systems:</strong> Windows, Linux, macOS</li>
+      <li>Programming: Python, Java, C++</li>
+      <li>Cybersecurity: Penetration Testing, IDS/IPS, Firewalls, Incident Response</li>
+      <li>Tools: Wireshark, Nmap, Zeek, Snort, Scapy, pfSense, IPTables</li>
+      <li>Operating Systems: Windows, Linux, macOS</li>
     </ul>
 
     <h3>Soft Skills</h3>
     <p>Problem-Solving | Critical Thinking | Communication | Documentation | Team Collaboration</p>
   </section>
 
-  <!-- Projects Section -->
   <section id="projects">
     <h2>Projects</h2>
     <div class="projects" id="projects-container"></div>
   </section>
 
-  <!-- Contact Section -->
   <section class="contact" id="contact">
     <h2>Contact Me</h2>
     <form action="mailto:tanakashumba04@gmail.com" method="POST" enctype="text/plain">
@@ -259,39 +269,51 @@
     // Project Data
     const projects = [
       {"name":"Python Network Scanner","description":"Python project for network scanning","tech":"Python","url":"https://github.com/TanakaShumba/Python-Network-Scanner"},
-      {"name":"automated-vulnerability-scanner","description":"A safe, educational demo that parses mock Nmap-style JSON scan results and maps services/ports to a small sample CVE database.","tech":"Python","url":"https://github.com/TanakaShumba/automated-vulnerability-scanner"},
-      {"name":"siem-log-parser","description":"A parser to analyze and interpret logs from Security Information and Event Management systems.","tech":"Python","url":"https://github.com/TanakaShumba/siem-log-parser"},
-      {"name":"phishing-email-detector","description":"An AI-based tool to detect phishing emails and protect users from malicious attacks.","tech":"Python","url":"https://github.com/TanakaShumba/phishing-email-detector"},
-      {"name":"windows-event-log-analyzer","description":"A utility to analyze Windows event logs for suspicious activities and potential security threats.","tech":"Python","url":"https://github.com/TanakaShumba/windows-event-log-analyzer"},
-      {"name":"soc-alert-triage","description":"A system for triaging Security Operations Center alerts to prioritize and respond to incidents effectively.","tech":"Python","url":"https://github.com/TanakaShumba/soc-alert-triage"},
-      {"name":"cloud-misconfig-scanner","description":"A tool to scan cloud environments for common misconfigurations that could lead to security vulnerabilities.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-misconfig-scanner"},
-      {"name":"nmap-threat-model","description":"A comprehensive threat model for Nmap, identifying potential security risks and mitigation strategies.","tech":"Python","url":"https://github.com/TanakaShumba/nmap-threat-model"},
-      {"name":"malware-analyzer","description":"Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment","tech":"Python","url":"https://github.com/TanakaShumba/malware-analyzer"},
-      {"name":"ethical-hacking-sim","description":"Python scripts simulating ethical hacking techniques for learning and demonstration purposes.","tech":"Python","url":"https://github.com/TanakaShumba/ethical-hacking-sim"},
-      {"name":"cloud-security-checker","description":"Python script to simulate checking cloud service configurations for common security misconfigurations.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-security-checker"},
-      {"name":"basic-pen-test","description":"Simple Python script for educational penetration testing and vulnerability scanning.","tech":"Python","url":"https://github.com/TanakaShumba/basic-pen-test"},
-      {"name":"simple-ids","description":"A basic IDS/IPS simulation in Python","tech":"Python","url":"https://github.com/TanakaShumba/simple-ids"},
-      {"name":"cybersecurity-lab-series","description":"Educational scripts for network scanning and VoIP traffic analysis.","tech":"Python","url":"https://github.com/TanakaShumba/cybersecurity-lab-series"},
-      {"name":"secure-hospital-system","description":"Python-based secure hospital management system","tech":"Python","url":"https://github.com/TanakaShumba/secure-hospital-system"},
-      {"name":"voip-traffic-analyzer","description":"A Python project that captures and analyzes VoIP RTP packets on a local network.","tech":"Python","url":"https://github.com/TanakaShumba/voip-traffic-analyzer"},
-      {"name":"Healthcare_System","description":"A simple healthcare management system built with Flask.","tech":"HTML, Flask","url":"https://github.com/TanakaShumba/Healthcare_System"},
-      {"name":"Login-BruteForce-Simulator","description":"A local, educational login brute-force simulator with a Flask server and a conservative simulator client.","tech":"Python, Flask","url":"https://github.com/TanakaShumba/Login-BruteForce-Simulator"},
-      {"name":"password-security-demo","description":"Demonstration of best practices for password hashing and salting.","tech":"Python","url":"https://github.com/TanakaShumba/password-security-demo"},
-      {"name":"security-awareness-mini-course","description":"An introductory course designed to enhance security awareness among users and organizations.","tech":"Python","url":"https://github.com/TanakaShumba/security-awareness-mini-course"}
+      {"name":"automated-vulnerability-scanner","description":"Educational demo parsing Nmap-style JSON and mapping to CVEs","tech":"Python","url":"https://github.com/TanakaShumba/automated-vulnerability-scanner"},
+      {"name":"siem-log-parser","description":"Analyze and interpret SIEM logs","tech":"Python","url":"https://github.com/TanakaShumba/siem-log-parser"},
+      {"name":"phishing-email-detector","description":"AI-based phishing email detection tool","tech":"Python","url":"https://github.com/TanakaShumba/phishing-email-detector"},
+      {"name":"windows-event-log-analyzer","description":"Analyze Windows event logs for suspicious activity","tech":"Python","url":"https://github.com/TanakaShumba/windows-event-log-analyzer"},
+      {"name":"soc-alert-triage","description":"System for triaging SOC alerts effectively","tech":"Python","url":"https://github.com/TanakaShumba/soc-alert-triage"},
+      {"name":"cloud-misconfig-scanner","description":"Scan cloud environments for misconfigurations","tech":"Python","url":"https://github.com/TanakaShumba/cloud-misconfig-scanner"},
+      {"name":"nmap-threat-model","description":"Comprehensive threat model for Nmap","tech":"Python","url":"https://github.com/TanakaShumba/nmap-threat-model"},
+      {"name":"malware-analyzer","description":"Simulate analyzing suspicious files in a controlled environment","tech":"Python","url":"https://github.com/TanakaShumba/malware-analyzer"},
+      {"name":"ethical-hacking-sim","description":"Simulate ethical hacking techniques for learning","tech":"Python","url":"https://github.com/TanakaShumba/ethical-hacking-sim"},
+      {"name":"cloud-security-checker","description":"Check cloud service configurations for misconfigurations","tech":"Python","url":"https://github.com/TanakaShumba/cloud-security-checker"},
+      {"name":"basic-pen-test","description":"Educational penetration testing and vulnerability scanning","tech":"Python","url":"https://github.com/TanakaShumba/basic-pen-test"},
+      {"name":"simple-ids","description":"Basic IDS/IPS simulation","tech":"Python","url":"https://github.com/TanakaShumba/simple-ids"},
+      {"name":"cybersecurity-lab-series","description":"Network scanning and VoIP traffic analysis","tech":"Python","url":"https://github.com/TanakaShumba/cybersecurity-lab-series"},
+      {"name":"secure-hospital-system","description":"Secure hospital management system","tech":"Python","url":"https://github.com/TanakaShumba/secure-hospital-system"},
+      {"name":"voip-traffic-analyzer","description":"Captures and analyzes VoIP RTP packets","tech":"Python","url":"https://github.com/TanakaShumba/voip-traffic-analyzer"},
+      {"name":"Healthcare_System","description":"Healthcare management system with Flask","tech":"HTML, Flask","url":"https://github.com/TanakaShumba/Healthcare_System"},
+      {"name":"Login-BruteForce-Simulator","description":"Local login brute-force simulator","tech":"Python, Flask","url":"https://github.com/TanakaShumba/Login-BruteForce-Simulator"},
+      {"name":"password-security-demo","description":"Best practices for password hashing and salting","tech":"Python","url":"https://github.com/TanakaShumba/password-security-demo"},
+      {"name":"security-awareness-mini-course","description":"Introductory security awareness course","tech":"Python","url":"https://github.com/TanakaShumba/security-awareness-mini-course"}
     ];
 
     const container = document.getElementById("projects-container");
-    projects.forEach((repo, index) => {
-      const card = document.createElement("div");
-      card.className = "card";
-      card.innerHTML = `
+    projects.forEach((repo,index)=>{
+      const card=document.createElement("div");
+      card.className="card";
+      card.innerHTML=`
         <h3>${repo.name}</h3>
         <p>${repo.description}</p>
         <div class="tech">Tech/Tools: ${repo.tech}</div>
         <a class="btn" href="${repo.url}" target="_blank">View on GitHub</a>
       `;
       container.appendChild(card);
-      setTimeout(() => card.classList.add("fade-in"), 200 * index);
+      setTimeout(()=>card.classList.add("fade-in"),200*index);
+    });
+
+    // Section reveal on scroll
+    const sections = document.querySelectorAll('section');
+    window.addEventListener('scroll',()=>{
+      const triggerBottom = window.innerHeight*0.85;
+      sections.forEach(section=>{
+        const sectionTop=section.getBoundingClientRect().top;
+        if(sectionTop<triggerBottom){
+          section.classList.add('visible');
+        }
+      });
     });
   </script>
 </body>
