--- a/index.html
+++ b/index.html
@@ -13,37 +13,35 @@
       overflow-x: hidden;
     }
 
-    /* Sticky Navigation */
+    /* Sticky Navbar */
     nav {
       position: sticky;
       top: 0;
-      background: rgba(0,0,0,0.85);
+      width: 100%;
+      background: rgba(0,0,0,0.9);
       border-bottom: 2px solid #39ff14;
       z-index: 100;
       display: flex;
       justify-content: center;
-      padding: 15px 0;
     }
-
     nav a {
-      margin: 0 20px;
       color: #39ff14;
+      padding: 15px 20px;
       text-decoration: none;
-      font-weight: bold;
       transition: 0.3s;
     }
-
     nav a:hover {
-      color: white;
+      background: #39ff14;
+      color: black;
+      border-radius: 5px;
     }
 
     header {
       text-align: center;
-      padding: 80px 20px 40px;
+      padding: 60px 20px 30px;
       position: relative;
       z-index: 1;
     }
-
     header img {
       width: 140px;
       height: 140px;
@@ -52,12 +50,10 @@
       margin-bottom: 20px;
       object-fit: cover;
     }
-
     header h1 {
       font-size: 3rem;
       margin: 10px 0;
     }
-
     header p {
       font-size: 1.2rem;
       max-width: 650px;
@@ -65,7 +61,6 @@
       line-height: 1.5;
       color: white;
     }
-
     .btn {
       display: inline-block;
       margin-top: 20px;
@@ -76,7 +71,6 @@
       border-radius: 30px;
       transition: 0.3s;
     }
-
     .btn:hover {
       background: #39ff14;
       color: black;
@@ -87,7 +81,6 @@
       position: relative;
       z-index: 1;
     }
-
     h2 {
       text-align: center;
       margin-bottom: 40px;
@@ -95,57 +88,11 @@
       color: #39ff14;
     }
 
-    /* About Section */
-    .about-content {
-      max-width: 850px;
-      margin: 0 auto;
-      text-align: left;
-      line-height: 1.6;
-      color: #fff;
-      position: relative;
-    }
-
-    .about-content p {
-      margin-bottom: 20px;
-      font-size: 1rem;
-    }
-
-    .about-content .skills {
-      margin-top: 30px;
-      padding: 20px;
-      border: 2px solid #39ff14;
-      border-radius: 10px;
-      background: rgba(0,0,0,0.6);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .about-content .skills:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 20px #39ff14;
-    }
-
-    .about-content .skills h3 {
-      color: #39ff14;
-      margin-bottom: 15px;
-    }
-
-    .about-content .skills ul {
-      list-style: none;
-      padding-left: 0;
-    }
-
-    .about-content .skills ul li {
-      margin-bottom: 8px;
-      color: #fff;
-    }
-
-    /* Projects */
     .projects {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 25px;
     }
-
     .card {
       background: rgba(0, 0, 0, 0.7);
       border: 2px solid #39ff14;
@@ -156,44 +103,69 @@
       opacity: 0;
       transform: translateY(20px);
     }
-
     .card h3 {
       margin-bottom: 10px;
       font-size: 1.3rem;
       color: #39ff14;
     }
-
     .card p, .card .tech {
       font-size: 0.95rem;
       color: white;
     }
-
     .fade-in {
       opacity: 1 !important;
       transform: translateY(0) !important;
     }
 
-    /* Contact */
-    .contact form {
-      max-width: 500px;
+    .about, .contact {
+      max-width: 800px;
       margin: 0 auto;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
+      color: white;
+      text-align: center;
+      line-height: 1.6;
     }
 
+    .contact form {
+      display: flex;
+      flex-direction: column;
+      max-width: 500px;
+      margin: 0 auto;
+    }
     .contact input, .contact textarea {
+      margin: 8px 0;
       padding: 10px;
+      border: 2px solid #39ff14;
       border-radius: 5px;
+      background: black;
+      color: #39ff14;
+    }
+    .contact button {
+      margin-top: 10px;
+      padding: 12px 20px;
       border: 2px solid #39ff14;
       background: black;
       color: #39ff14;
-      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: 0.3s;
+    }
+    .contact button:hover {
+      background: #39ff14;
+      color: black;
     }
 
-    .contact input::placeholder, .contact textarea::placeholder {
+    .socials {
+      margin-top: 20px;
+    }
+    .socials a {
+      margin: 0 10px;
       color: #39ff14;
-      opacity: 0.7;
+      text-decoration: none;
+      font-size: 1.2rem;
+      transition: 0.3s;
+    }
+    .socials a:hover {
+      color: white;
     }
 
     #particles-js {
@@ -207,11 +179,8 @@
   </style>
 </head>
 <body>
-
-  <!-- Particle Background -->
   <div id="particles-js"></div>
 
-  <!-- Sticky Navigation -->
   <nav>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
@@ -221,67 +190,41 @@
   <header>
     <img src="images/about-me.jpg?v=2" alt="Tanaka Shumba Profile" />
     <h1>Tanaka Shumba</h1>
-    <p>Welcome to my portfolio where I showcase my projects in cybersecurity, coding, and technology. Here you will find selected work that reflects my skills and passion for solving technical challenges.</p>
+    <p>Detail-oriented Cybersecurity professional with experience in threat detection, incident response, penetration testing, and network monitoring. Skilled in Python, Java, C++, Wireshark, Zeek, Snort, and Nmap. Passionate about applying hands-on security expertise to real-world challenges.</p>
     <a href="resume.pdf" class="btn">View My Resume</a>
   </header>
 
-  <!-- About Section -->
-  <section class="about" id="about">
+  <section id="about" class="about">
     <h2>About Me</h2>
-    <div class="about-content">
-      <p>
-        I am a detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity at Troy University. My passion lies in protecting systems, networks, and sensitive data from threats while continuously learning and applying new technologies to stay ahead in this rapidly evolving field.
-      </p>
-      <p>
-        During my academic journey, I have gained hands-on experience in threat detection, incident response, penetration testing, and network monitoring. I am proficient in Python, Java, C++, and cybersecurity tools such as Wireshark, Nmap, Zeek, Snort, and Scapy. From analyzing network traffic to simulating attacks safely, I focus on practical solutions that strengthen security posture.
-      </p>
-      <p>
-        Beyond academics, I have contributed to several projects, including a <strong>VoIP Threat Analyzer</strong> and a <strong>Network Scanner & Vulnerability Detection Tool</strong>. I am committed to leveraging my technical expertise to solve real-world cybersecurity challenges.
-      </p>
-      <p>
-        I thrive in collaborative environments, where problem-solving, critical thinking, and clear communication are essential. My career goal is to work in a Security Operations Center (SOC) or cybersecurity consulting role, helping organizations build resilient systems and respond effectively to incidents. I am continuously exploring innovative approaches to security, driven by curiosity and a commitment to excellence.
-      </p>
-
-      <div class="skills">
-        <h3>Technical Skills & Tools</h3>
-        <ul>
-          <li><strong>Programming:</strong> Python, Java, C++</li>
-          <li><strong>Cybersecurity:</strong> Penetration Testing, IDS/IPS, Firewalls, Incident Response</li>
-          <li><strong>Tools:</strong> Wireshark, Nmap, Zeek, Snort, Scapy, pfSense, IPTables</li>
-          <li><strong>Operating Systems:</strong> Linux (Ubuntu/Kali), Windows, macOS</li>
-          <li><strong>Soft Skills:</strong> Problem-Solving, Critical Thinking, Communication, Documentation, Team Collaboration</li>
-        </ul>
-      </div>
-    </div>
+    <p>I am pursuing an M.S. in Computer Science – Cybersecurity at Troy University, with a B.S. in Cybersecurity. Experienced in IT support, threat detection, penetration testing, and network monitoring. I enjoy analyzing logs, identifying vulnerabilities, and implementing mitigation strategies.</p>
+    <p>Technical Skills: Python, Java, C++, Wireshark, Nmap, Zeek, Snort, Scapy, pfSense, IPTables. Operating Systems: Linux, Windows, macOS.</p>
+    <p>Soft Skills: Problem-Solving, Critical Thinking, Communication, Documentation, Team Collaboration.</p>
   </section>
 
-  <!-- Projects Section -->
   <section id="projects">
     <h2>Projects</h2>
     <div class="projects" id="projects-container"></div>
   </section>
 
-  <!-- Contact Section -->
-  <section class="contact" id="contact">
-    <h2>Contact Me</h2>
-    <p>If you would like to connect, feel free to reach out via email or through my socials below. I am open to collaborations, professional opportunities, and sharing knowledge.</p>
+  <section id="contact" class="contact">
+    <h2>Contact</h2>
+    <p>Feel free to reach out via email or socials below. Open to collaborations, professional opportunities, and knowledge sharing.</p>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
     <div class="socials">
       <a href="https://github.com/TanakaShumba" target="_blank">GitHub</a>
       <a href="https://linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
       <a href="mailto:tanakashumba04@gmail.com">Email</a>
     </div>
-    <form>
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit" class="btn">Send Message</button>
-    </form>
   </section>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script>
-    // Particles Background
+    // Particles background
     particlesJS("particles-js", {
       particles: {
         number: { value: 80 },
@@ -294,27 +237,24 @@
       }
     });
 
-    // Projects Data
     const projects = [
-      {"name":"Python-Network-Scanner","description":"Python project for network scanning.","tech":"Python","url":"#"},
-      {"name":"automated-vulnerability-scanner","description":"Educational demo parsing mock Nmap JSON scan results.","tech":"Python","url":"https://github.com/TanakaShumba/automated-vulnerability-scanner"},
-      {"name":"siem-log-parser","description":"Analyze and interpret logs from SIEM systems.","tech":"Python","url":"#"},
-      {"name":"phishing-email-detector","description":"AI tool to detect phishing emails.","tech":"Python","url":"#"},
-      {"name":"windows-event-log-analyzer","description":"Analyze Windows event logs for threats.","tech":"Python","url":"#"},
-      {"name":"soc-alert-triage","description":"Triage SOC alerts to prioritize incidents.","tech":"Python","url":"#"},
-      {"name":"cloud-misconfig-scanner","description":"Scan cloud environments for misconfigurations.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-misconfig-scanner"},
-      {"name":"nmap-threat-model","description":"Threat model for Nmap identifying risks.","tech":"Python","url":"#"},
-      {"name":"malware-analyzer","description":"Simulate analyzing suspicious files safely.","tech":"Python","url":"https://github.com/TanakaShumba/malware-analyzer"},
-      {"name":"ethical-hacking-sim","description":"Simulate ethical hacking techniques for learning.","tech":"Python","url":"https://github.com/TanakaShumba/ethical-hacking-sim"},
-      {"name":"cloud-security-checker","description":"Simulate checking cloud service configurations.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-security-checker"},
-      {"name":"basic-pen-test","description":"Simple Python script for penetration testing.","tech":"Python","url":"https://github.com/TanakaShumba/basic-pen-test"},
+      {"name":"Login-BruteForce-Simulator","description":"A local, educational login brute-force simulator with a Flask server and a conservative simulator client. Demonstrates account lockout, rate-limit handling, and safe testing practices","tech":"Python, Flask","url":"https://github.com/tanakashumba/Login-BruteForce-Simulator"},
+      {"name":"automated-vulnerability-scanner","description":"A safe, educational demo that parses mock Nmap-style JSON scan results and maps services/ports to a small sample CVE database.","tech":"Python","url":"https://github.com/TanakaShumba/automated-vulnerability-scanner"},
+      {"name":"basic-pen-test","description":"Simple Python script for educational penetration testing and vulnerability scanning.","tech":"Python","url":"https://github.com/TanakaShumba/basic-pen-test"},
+      {"name":"simple-ids","description":"A basic IDS/IPS simulation in Python to detect suspicious activity in a network environment.","tech":"Python","url":"https://github.com/TanakaShumba/simple-ids"},
+      {"name":"cloud-misconfig-scanner","description":"Tool to scan cloud environments for common misconfigurations that could lead to vulnerabilities.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-misconfig-scanner"},
+      {"name":"cloud-security-checker","description":"Python script to simulate checking cloud service configurations for common security misconfigurations.","tech":"Python","url":"https://github.com/TanakaShumba/cloud-security-checker"},
       {"name":"cybersecurity-lab-series","description":"Educational scripts for network scanning and VoIP traffic analysis.","tech":"Python","url":"https://github.com/TanakaShumba/cybersecurity-lab-series"},
-      {"name":"secure-hospital-system","description":"Python-based secure hospital management system.","tech":"Python","url":"https://github.com/TanakaShumba/secure-hospital-system"},
-      {"name":"Healthcare_System","description":"Flask-based healthcare management system.","tech":"HTML, Flask","url":"https://github.com/TanakaShumba/Healthcare_System"},
-      {"name":"Login-BruteForce-Simulator","description":"Local educational login brute-force simulator.","tech":"Python, Flask","url":"https://github.com/tanakashumba/Login-BruteForce-Simulator"},
-      {"name":"password-security-demo","description":"Demo of best practices for password security.","tech":"Python","url":"https://github.com/TanakaShumba/password-security-demo"},
-      {"name":"security-awareness-mini-course","description":"Intro course to enhance security awareness.","tech":"Python","url":"https://github.com/TanakaShumba/security-awareness-mini-course"},
-      {"name":"voip-traffic-analyzer","description":"Capture and analyze VoIP RTP packets for learning.","tech":"Python","url":"https://github.com/TanakaShumba/voip-traffic-analyzer"}
+      {"name":"ethical-hacking-sim","description":"Python scripts simulating ethical hacking techniques for learning and demonstration purposes.","tech":"Python","url":"https://github.com/TanakaShumba/ethical-hacking-sim"},
+      {"name":"Healthcare_System","description":"A simple healthcare management system built with Flask.","tech":"HTML, Flask","url":"https://github.com/TanakaShumba/Healthcare_System"},
+      {"name":"malware-analyzer","description":"Python script to simulate analyzing suspicious files in a controlled environment.","tech":"Python","url":"https://github.com/TanakaShumba/malware-analyzer"},
+      {"name":"password-security-demo","description":"Demonstration of best practices for password hashing and salting.","tech":"Python","url":"https://github.com/TanakaShumba/password-security-demo"},
+      {"name":"voip-traffic-analyzer","description":"A Python project that captures and analyzes VoIP RTP packets on a local network for educational use.","tech":"Python","url":"https://github.com/TanakaShumba/voip-traffic-analyzer"},
+      {"name":"nmap-threat-model","description":"A comprehensive threat model for Nmap, identifying potential security risks and mitigation strategies.","tech":"Python","url":"https://github.com/TanakaShumba/nmap-threat-model"},
+      {"name":"phishing-email-detector","description":"An AI-based tool to detect phishing emails and protect users from malicious attacks.","tech":"Python","url":"https://github.com/TanakaShumba/phishing-email-detector"},
+      {"name":"windows-event-log-analyzer","description":"A utility to analyze Windows event logs for suspicious activities and potential security threats.","tech":"Python","url":"https://github.com/TanakaShumba/windows-event-log-analyzer"},
+      {"name":"soc-alert-triage","description":"A system for triaging Security Operations Center alerts to prioritize and respond to incidents effectively.","tech":"Python","url":"https://github.com/TanakaShumba/soc-alert-triage"},
+      {"name":"secure-hospital-system","description":"Python-based secure hospital management system.","tech":"Python","url":"https://github.com/TanakaShumba/secure-hospital-system"}
     ];
 
     const container = document.getElementById("projects-container");
